# Rubble

./: .gitignore  README.md  pyproject.toml  requirements.txt  rubble.py  setup.py
docs/JupyterNotebooks/: BrownianMotionOnlyTest.ipynb  Demo2_CoagBouncingFrag_VelDist_MassTransfer.ipynb  Demo3_EvaporationCondensation.ipynb  Full_Model_Tests.ipynb  Tests_Analytical_Results.ipynb  Tests_Bouncing_MassTransfer.ipynb  Tests_coag_frag_in_PPDs.ipynb
docs/NewDemoNotebooks/: Demo2_CoagBouncingFrag_VelDist_MassTransfer.ipynb  Demo3_EvaporationCondensation.ipynb
rubble/: __init__.py  rubble.py  rubble_data.py  rubble_torch.py
src/: rubble.py
tests/: test.py
