[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubble"
version = "0.3.0"
description = "An implicit code for simulating the local evolution of solid size distributions in protoplanetary disks"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    { name = "Rixin Li", email = "rixinli.astro@gmail.com" },
]
keywords = ["dust evolution", "coagulation", "Smoluchowski"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "torch",
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
Homepage = "https://github.com/astroboylrx/Rubble"

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests", "data"]
